--- a/src/app/components/donate/donate.component.html
+++ b/src/app/components/donate/donate.component.html
@@ -1,15 +1,38 @@
 <div class="donates">
-
-    <div class="title">
-        <div class="top-content my-container">
-            <h1>JE FAIS UN DON</h1>
-            <p>Pour financer les dépenses liées à l’organisation d’événements, à l’achat de matériel, au fonctionnement de ce site, etc, nous avons besoin du soutien financier de chacun(e) d’entre vous</p>
-        </div>
-    </div>
     <div class="content my-container">
+        <div class="top">
+            <div class="texts">
+                <h2>DRAW <span>A NEW DREAM</span></h2>
+                <span class="text">Chers basketteurs, chers amoureux de la balle orange, avec vous je veux redorer le blason du basketball camerounais.</span>
+                <p>
+                    <i class="pi pi pi-check-circle"> </i>
+                    Je suis votre candidat
+                </p>
+                <p>
+                    <i class="pi pi pi-check-circle"></i>
+                    Je suis l'homme de la situation
+                </p>
+                <p>
+                    <i class="pi pi pi-check-circle"></i>
+                    Je serais votre nouveau président
+                </p>
+                <a href="https://www.leetchi.com/c/soutien-a-la-candiature-de-yves-tsala-a-la-presidence-de-la-fecabasket-nov-dec-2022" target="_blank">
+                    <i class="pi pi-heart"></i>
+                    Faire un don
+                </a>
 
-        <h3 class="first">Basic</h3>
-        <p-steps [model]="items"></p-steps>
-        
+                <span class="reason">Pour financer les dépenses liées à la campagne électorale, nous avons besoin du soutien financier de chacun(e) d’entre vous.</span>
+
+            </div>
+            <img src="../../../assets/img/donate/donate-main.jpeg">
+        </div>
+        <div class="hashtags">
+            <div class=tags>
+                -<span>#YT22</span> - <span>#YVESTSALA2022</span> - <span>#ELECTIONS</span> - <span>#CANDIDAT</span> - <span>#PRESIDENT</span> - <span>#BASKETBALL</span> - <span>#CAMEROUN</span> - <span>#CAMEROON</span> - <span>#FECABASKET</span>
+            </div>
+            <div class=tags>
+                -<span>#YT22</span> - <span>#YVESTSALA2022</span> - <span>#ELECTIONS</span> - <span>#CANDIDAT</span> - <span>#PRESIDENT</span> - <span>#BASKETBALL</span> - <span>#CAMEROUN</span> - <span>#CAMEROON</span> - <span>#FECABASKET</span>
+            </div>
+        </div>
     </div>
 </div>
