--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,6 +18,7 @@
                 </div>
     
                 <button class="donate" routerLink="/faire-un-don">
+                    <i class="pi pi-heart"></i>
                     Faire un don
                 </button>
     
