--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -98,6 +98,11 @@
                         background: white;
                         color: #f56f36;
                     }
+
+                    i{
+                        margin-right: 10px;
+                        font-size: 1.2em;
+                    }
                 }
     
                 .share{
