--- a/src/app/components/home-program/home-program.component.html
+++ b/src/app/components/home-program/home-program.component.html
@@ -12,7 +12,7 @@
                 <fa-icon [icon]="faClock"></fa-icon>
                 <div class="tab-texts">
                     <p class="top">Le programme en version courte</p>
-                    <p class="bottom">Découvrez une version simple et alléger du programme</p>
+                    <p class="bottom">Découvrez une version simple et allégée du programme</p>
                 </div>
                 <fa-icon [icon]="faAngleRight"></fa-icon>
 
