--- a/src/app/components/program-long/program-long.component.html
+++ b/src/app/components/program-long/program-long.component.html
@@ -3,7 +3,7 @@
     <div class="title">
         <div class="top-content my-container">
             <h1>PROGRAMME PAR THÉMATIQUE</h1>
-            <p>Pour financer les dépenses liées à l’organisation d’événements, à l’achat de matériel, au fonctionnement de ce site, etc, nous avons besoin du soutien financier de chacun(e) d’entre vous</p>
+            <p>Découvrez mes propositions pour agir et transformer notre potentiel en performance réelle et redonner à tous les acteurs majeurs du baskets-ball camerounais la place qu'ils méritent.</p>
         </div>
     </div>
 
