--- a/src/app/components/program-short/program-short.component.scss
+++ b/src/app/components/program-short/program-short.component.scss
@@ -55,6 +55,10 @@ $colorBlue: #15385c;
         width: 100%;
         height: 100%;
 
+        .p-accordion .p-accordion-header .p-accordion-header-link {
+            color: #ffffff;
+            background: #15385d;
+        }
 
         .p-accordion .p-accordion-header:not(.p-disabled).p-highlight .p-accordion-header-link {
             background: #f56f36;
@@ -70,13 +74,13 @@ $colorBlue: #15385c;
             box-shadow: none;
         }
 
-
         .accordion-content{
             display: flex;
             justify-content: center;
             padding: 20px;
 
-            .images{
+            .images,
+            .single{
                 width: 400px;
                 height: 300px;
                 margin-right: 30px;
@@ -155,8 +159,6 @@ $colorBlue: #15385c;
 
             
         }
-
-        
     }
 }
 
@@ -166,7 +168,8 @@ $colorBlue: #15385c;
             .accordion-content{
                 padding: 0;
     
-                .images{
+                .images,
+                .single{
                     width: 300px !important;
                     height: 250px !important;
                     margin-right: 20px !important;
@@ -190,11 +193,17 @@ $colorBlue: #15385c;
                 justify-content: center;
                 align-items: center;
 
-                .images{
+                .images,
+                .single{
                     width: 500px !important;
                     height: 300px !important;
                     margin-right: 0 !important;
                     margin-bottom: 30px;
+                }
+
+                .single{
+                    object-fit: cover;
+                    object-position: bottom;
                 }
             }
         }
@@ -225,7 +234,8 @@ $colorBlue: #15385c;
 
         .content{
             .accordion-content{
-                .images{
+                .images,
+                .single{
                     width:100% !important;
 
                     .swiper-wrapper { 
@@ -248,7 +258,8 @@ $colorBlue: #15385c;
     .program-short{
         .content{
             .accordion-content{
-                .images{
+                .images,
+                .single{
                     height: 237px !important;
                 }
             }
@@ -260,7 +271,8 @@ $colorBlue: #15385c;
     .program-short{
         .content{
             .accordion-content{
-                .images{
+                .images,
+                .single{
                     height: 210px !important;
                 }
             }
@@ -272,7 +284,8 @@ $colorBlue: #15385c;
     .program-short{
         .content{
             .accordion-content{
-                .images{
+                .images,
+                .single{
                     height: 200px !important;
                 }
             }
