--- a/src/app/components/program/program.component.html
+++ b/src/app/components/program/program.component.html
@@ -3,7 +3,7 @@
     <div class="title">
         <div class="top-content my-container">
             <h1>PROGRAMME</h1>
-            <p>Pour financer les dépenses liées à l’organisation d’événements, à l’achat de matériel, au fonctionnement de ce site, etc, nous avons besoin du soutien financier de chacun(e) d’entre vous</p>
+            <p>Découvrez mes propositions pour agir et transformer notre potentiel en performance réelle et redonner à tous les acteurs majeurs du baskets-ball camerounais la place qu'ils méritent.</p>
         </div>
     </div>
 
@@ -13,7 +13,8 @@
 
     <div class="program-videos my-container">
         <h2><span>Découvrez</span> Le Programme en vidéo</h2>
-        <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam dignissimos quidem, laborum ipsum expedita dicta mollitia repellendus magnam, unde corporis rem quo velit ea incidunt accusamus? Quaerat animi officiis enim!</span>
+        <p>Une image valant mille mots, nous ne pouvons plus attendre. Il faut transformer le basketball en profondeur dans toutes les régions.</p>
+        <p>De l'Extrême-Nord au Sud, nous présentons notre programme pour un avenir en commun. L'union de tous les acteurs de la balle orange nous donne une force irrésistible; nous sommes prêts à prendre le relais.</p>
         
         <div class="videos">
             <div class="video">
