--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,7 +3,7 @@
     <div class="title">
         <div class="top-content my-container">
             <h1>CONTACT</h1>
-            <p>Pour financer les dépenses liées à l’organisation d’événements, à l’achat de matériel, au fonctionnement de ce site, etc, nous avons besoin du soutien financier de chacun(e) d’entre vous</p>
+            <p>Pour m'informer et suivre Yves Tsala 2022</p>
         </div>
     </div>
 
@@ -45,4 +45,5 @@
         </div>
         
     </div>
+
 </div>
