--- a/src/app/components/home-program/home-program.component.html
+++ b/src/app/components/home-program/home-program.component.html
@@ -31,5 +31,5 @@
         
         <p class="call-to-donate">Soutenez le candidat Yves Tsala en <span routerLink="/faire-un-don">faisant un don</span></p>
     </div>
-    <img src="../../assets/img/home/program/program.png" alt="">
+    <img src="../../assets/img/home/program/program.jpeg" alt="">
 </div>
