--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,13 +12,28 @@
 
         <div class="ball"></div>
     </div>
+
     <div class="content my-container">
         <app-home-about></app-home-about>
         <h2><span>Découvrez</span> Le QG De Campagne</h2>
-        <app-infinite-scroll-argument></app-infinite-scroll-argument>
-        <h2><span>Découvrez</span> Notre Programme</h2>
-        <app-home-program></app-home-program>
+    </div>
+
+    <div class="qg-wrapper">
+        <div class="qg-content my-container">
+            <app-infinite-scroll-argument></app-infinite-scroll-argument>
+        </div>
+    </div>
+
+    <div class="program-wrapper">
+        <div class="program-content my-container">
+            <h2><span>Découvrez</span> Notre Programme</h2>
+            <app-home-program></app-home-program>
+        </div>
+    </div>
+        
+    <div class="content my-container">
         <h2><span>Découvrez</span> Quelques Témoignages</h2>
         <app-testimonies></app-testimonies>
     </div>
+
 </div>
