--- a/src/app/components/testimonies/testimonies.component.scss
+++ b/src/app/components/testimonies/testimonies.component.scss
@@ -42,7 +42,7 @@
     
                     .message{
                         font-size: 0.9em;
-                        text-align: center;
+                        text-align: justify;
                         margin: 10px 0;
                     }
 
