--- a/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
+++ b/src/app/components/infinite-scroll-argument/infinite-scroll-argument.component.scss
@@ -6,10 +6,7 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        padding: 50px 25px 50px 25px;
-        background: #ed6e34;
-        margin-top: 30px;
-        margin-bottom: 80px;
+        padding: 50px 0;
     
         .infinite-swiper{
             width: 100%;
@@ -32,6 +29,7 @@
                     width: 100%;
                     height: 15em;
                     object-fit: cover;
+                    object-position: top;
                 }
     
                 .texts{
@@ -124,6 +122,6 @@
 
     @media all and (max-width: 1030px){
         .arguments{
-            padding: 30px 10px 30px 10px;
+            padding: 30px 0;
         }
     }
