--- a/src/app/components/office-member-details/office-member-details.component.scss
+++ b/src/app/components/office-member-details/office-member-details.component.scss
@@ -110,6 +110,7 @@
                 height: 200px;
                 width: 200px;
                 object-fit: cover;
+                object-position: top;
                 border-radius: 50%;
                 box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
             }
