--- a/src/app/components/donate/donate.component.html
+++ b/src/app/components/donate/donate.component.html
@@ -2,20 +2,26 @@
     <div class="content my-container">
         <div class="top">
             <div class="texts">
-                <h2>DRAW <span>A NEW DREAM</span></h2>
+                <h2>DRAW <span>A NEW VISION</span></h2>
                 <span class="text">Chers basketteurs, chers amoureux de la balle orange, avec vous je veux redorer le blason du basketball camerounais.</span>
-                <p>
-                    <i class="pi pi pi-check-circle"> </i>
-                    Je suis votre candidat
-                </p>
-                <p>
-                    <i class="pi pi pi-check-circle"></i>
-                    Je suis l'homme de la situation
-                </p>
-                <p>
-                    <i class="pi pi pi-check-circle"></i>
-                    Je serais votre nouveau président
-                </p>
+                
+                <ul>
+                    <li>
+                        <i class="pi pi pi-check-circle"> </i>
+                        Je suis votre candidat
+                    </li>
+
+                    <li>
+                        <i class="pi pi pi-check-circle"></i>
+                        Je suis l'homme de la situation
+                    </li>
+
+                    <li>
+                        <i class="pi pi pi-check-circle"></i>
+                        Je serais votre nouveau président
+                    </li>
+                </ul>
+                
                 <a href="https://www.leetchi.com/c/soutien-a-la-candiature-de-yves-tsala-a-la-presidence-de-la-fecabasket-nov-dec-2022" target="_blank">
                     <i class="pi pi-heart"></i>
                     Faire un don
