--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -186,6 +186,11 @@ header{
             .p-sidebar-content{
                 height: 100%;
                 padding-top: 35px !important;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                width: 100%;
+
                 nav{
                     display: flex;
                     flex-direction: column;
@@ -277,6 +282,40 @@ header{
                             .active-link{
                                 background: $colorBlue;
                                 color: white;
+                            }
+                        }
+                    }
+                }
+
+                .socials{
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    display: flex;
+                    align-items: flex-end;
+                    color: white;
+
+                    p{
+                        width: 100%;
+                        padding-bottom: 20px;
+                        border-bottom: 1px solid white;
+                        text-align: right;
+                    }
+
+                    ul{
+                        display: flex;
+                        list-style: none;
+                        margin-top: 20px;
+
+                        li{
+                            margin-left: 20px;
+                            
+                            a{
+                                color: white;
+                                
+                                i{
+                                    font-size: 1.25em;
+                                }
                             }
                         }
                     }
