--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
 
     <div class="content my-container">
         <app-home-about></app-home-about>
-        <h2><span>Découvrez</span> Le QG De Campagne</h2>
+        <h2 class="title"><span>Découvrez</span> Le QG De Campagne</h2>
     </div>
 
     <div class="qg-wrapper">
@@ -26,13 +26,13 @@
 
     <div class="program-wrapper">
         <div class="program-content my-container">
-            <h2><span>Découvrez</span> Notre Programme</h2>
+            <h2 class="title"><span>Découvrez</span> Notre Programme</h2>
             <app-home-program></app-home-program>
         </div>
     </div>
         
     <div class="content my-container">
-        <h2><span>Découvrez</span> Quelques Témoignages</h2>
+        <h2 class="title"><span>Découvrez</span> Quelques Témoignages</h2>
         <app-testimonies></app-testimonies>
     </div>
 
