--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -119,34 +119,31 @@
 
     }
 
+    .title{
+        color: #f56f36;
+        margin: 70px 0 30px 0;
+        border-radius: 3px;
+        width: 100%;
+
+        span{
+            padding: 10px 25px;
+            color: white;
+            background-color: #15385c;
+            font-weight: bold;
+            margin-right: 5px;
+            border-radius: 3px;
+        }
+    }
 
     .content{
         padding-top: 5em;
-        padding-bottom: 5em;
+        padding-bottom: 3em;
         display: flex;
         flex-direction: column;
         align-items: center;
         width: 100%;
 
-        h2{
-            color: #f56f36;
-            margin: 70px 0 30px 0;
-            border-radius: 3px;
-            width: 100%;
-
-            span{
-                padding: 10px 25px;
-                color: white;
-                background-color: #15385c;
-                font-weight: bold;
-                margin-right: 5px;
-                border-radius: 3px;
-            }
-        }
-
-        
         app-home-about,
-        app-home-program,
         app-testimonies{
             width: 100%;
         }
@@ -182,7 +179,9 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                app-infinite-scroll-argument{
+                flex-direction: column;
+
+                app-home-program{
                     width: 100%;
                 }
             }
@@ -200,6 +199,19 @@
                 img{
                     left: 4%;
                     width: 40vh;
+                }
+            }
+        }
+
+        .program-wrapper{
+            margin-top: 100px;
+
+            .program-content{
+                padding-top: 2em;
+                padding-bottom: 0;
+
+                app-home-program{
+                    width: 100%;
                 }
             }
         }
@@ -263,21 +275,18 @@
             }
         }
 
-        .content{
-
-            h2{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-                margin-bottom: 0;
-                margin-top: 30px;
-                
-                span{
-                    margin-right: 0px;
-                    margin-bottom: 15px;
-                    border-radius: 3px;
-                }
+        .title{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            margin-bottom: 0;
+            margin-top: 30px;
+            
+            span{
+                margin-right: 0px;
+                margin-bottom: 15px;
+                border-radius: 3px;
             }
         }
     }
@@ -286,14 +295,8 @@
 @media all and (max-width: 930px){
 
     .home{
-
-        .content{
-
-            h2{
-
-                margin-top: 10px;
-
-            }
+        .title{
+            margin-top: 10px;
         }
     }
 }
@@ -369,14 +372,12 @@
 @media all and (max-width: 660px){
 
     .home{
-
         .hero{
             min-height: 100vh;
             height: fit-content;
             padding: 5em 0 1em 0;
 
             .hero-content{
-
                 align-items: center;
                 flex-direction: column;
                 padding: 0;
@@ -390,7 +391,6 @@
                 }
                 
                 .texts{
-
                     width: 284px;
                     margin: 0;
 
@@ -403,12 +403,10 @@
                         line-height: 20px;
                         font-size: 1.05em;
                     }
-
                 }
             }
 
             .ball{
-
                 display: none;
             }
         }
@@ -418,9 +416,7 @@
 @media all and (max-width: 425px){
 
     .home{
-
         .hero{
-
             .hero-content{
 
                 img{
@@ -436,10 +432,8 @@
                     .text{
                         line-height: 23px;
                     }
-
                 }
             }
-
         }
     }
 }
