--- a/src/app/components/donate/donate.component.scss
+++ b/src/app/components/donate/donate.component.scss
@@ -35,6 +35,7 @@ $colorBlue: #15385c;
                 background-image: url("../../../assets/img/donate/donate-bg.webp");
                 background-size: cover;
                 background-repeat: no-repeat;
+                background-position: center;
 
                 h2{
                     font-size: 2.5em;
@@ -50,16 +51,20 @@ $colorBlue: #15385c;
                     margin-bottom: 15px;
                 }
 
-                p{
-                    margin: 5px 0;
-                    display: flex;
-                    align-items: center;
-
-                    i{
-                        margin-right: 10px;
-                        font-weight: 900;
-                        font-size: 1.2em;
-                        color: #f56f36;
+                ul{
+                    list-style: none;
+                    margin-bottom: 5px;
+                    li{
+                        margin: 5px 0;
+                        display: flex;
+                        align-items: center;
+        
+                        i{
+                            margin-right: 10px;
+                            font-weight: 900;
+                            font-size: 1.2em;
+                            color: #f56f36;
+                        }
                     }
                 }
 
@@ -99,7 +104,7 @@ $colorBlue: #15385c;
             }
 
             img{
-                width: 30%;
+                width: 410px;
                 height: 100%;
                 object-fit: cover;  
                 box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;          
@@ -135,5 +140,61 @@ $colorBlue: #15385c;
             }
         }
 
+    }
+}
+
+@media all and (max-width: 1024px){
+    .donates{    
+        .content{            
+            .top{
+                img{
+                    width: 320px;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 884px){
+    .donates{    
+        .content{   
+            padding-top: 4.5em;
+            min-height: 100vh;
+            height: fit-content;
+
+            .top{
+                flex-direction: column-reverse;
+
+                .texts{
+                    align-items: center;
+                    padding: 60px 0 30px 0;
+                    text-align: center;
+                }
+
+                img{
+                    width: 100%;
+                    height: 420px;
+                }
+            }
+        }
+    }
+}
+
+@media all and (max-width: 425px){
+    .donates{    
+        .content{   
+            .top{
+                .texts{
+                    padding: 40px 0 20px 0;
+                    h2{
+                        font-size: 1.8em;
+                    }
+
+                    ul{
+                        font-size: 0.95em;
+                    }
+                }
+            }
+        }
     }
 }
