--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -49,6 +49,24 @@
                 </div>
             </button>
         </nav>
+
+        <div class="socials">
+            <p>Nous suivre</p>
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/yvestsala2022" target="_blank"><i class="pi pi-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/yvestsala2022" target="_blank"><i class="pi pi-twitter"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCqWnDOIRZ1_xnt9f8qGjRag" target="_blank"><i class="pi pi-youtube"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/yvestsala2022/" target="_blank"><i class="pi pi-instagram"></i></a>
+                </li>
+            </ul>
+        </div>
     </p-sidebar>
 </header>
 
